# music-bot

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml  readme.md
services/: example.env
services/music_auth/: Dockerfile
services/music_auth/src/: main.py
services/music_auth/src/api/dependencies/: oauth.py
services/music_auth/src/api/routes/: oauth.py
services/music_auth/src/application/commands/: oauth.py
services/music_auth/src/application/use_cases/: process_oauth.py
services/music_auth/src/domain/interfaces/: oauth_client.py
services/music_auth/src/domain/value_objects/: auth_token.py  music_service.py  oauth_config.py  token_params.py
services/music_auth/src/infrastructure/: config.py  container.py  exceptions.py
services/music_auth/src/infrastructure/oauth/: yandex_client.py
